--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,7 +13,7 @@
             "device": "${command:raspberry-pi-pico.getChipUppercase}",
             "configFiles": [
                 "interface/cmsis-dap.cfg",
-                "target/${command:raspberry-pi-pico.getTarget}.cfg"
+                "target/rp2350.cfg"
             ],
             "svdFile": "${userHome}/.pico-sdk/sdk/2.1.1/src/${command:raspberry-pi-pico.getChip}/hardware_regs/${command:raspberry-pi-pico.getChipUppercase}.svd",
             "runToEntryPoint": "main",
@@ -21,7 +21,7 @@
             // Also works fine for flash binaries
             "overrideLaunchCommands": [
                 "monitor reset init",
-                "load ${workspaceFolder}/build/zephyr/zephyr.elf"
+                "load C:/Users/Tim/Documents/MagpieEmbedded/RaspberryPi/pico_zephyr_workspace/pico_zephyr/build/zephyr/zephyr.elf"
             ],
             "openOCDLaunchCommands": [
                 "adapter speed 5000"
