--- a/wifi_example/prj.conf
+++ b/wifi_example/prj.conf
@@ -17,6 +17,20 @@ CONFIG_NET_IPV4=y
 CONFIG_NET_IPV6=n
 
 CONFIG_NET_TCP=y
+CONFIG_NET_SOCKETS=y
+
+CONFIG_DNS_RESOLVER=y
+CONFIG_DNS_SERVER_IP_ADDRESSES=y
+CONFIG_DNS_SERVER1="192.0.2.2"
+CONFIG_DNS_RESOLVER_AI_MAX_ENTRIES=10
+
+# Network address config
+CONFIG_NET_CONFIG_AUTO_INIT=n
+CONFIG_NET_CONFIG_SETTINGS=y
+CONFIG_NET_CONFIG_NEED_IPV4=y
+CONFIG_NET_CONFIG_MY_IPV4_ADDR="192.0.2.1"
+CONFIG_NET_CONFIG_PEER_IPV4_ADDR="192.0.2.2"
+CONFIG_NET_CONFIG_MY_IPV4_GW="192.0.2.2"
 
 CONFIG_NET_LOG=y
 CONFIG_INIT_STACKS=y
@@ -31,3 +45,7 @@ CONFIG_WIFI_LOG_LEVEL_ERR=y
 # environment.
 CONFIG_NET_MGMT_EVENT_QUEUE_TIMEOUT=5000
 CONFIG_NET_MGMT_EVENT_QUEUE_SIZE=16
+
+CONFIG_POSIX_API=y
+
+CONFIG_DEBUG=y
