--- a/wifi_example/prj.conf
+++ b/wifi_example/prj.conf
@@ -38,6 +38,8 @@ CONFIG_INIT_STACKS=y
 CONFIG_NET_STATISTICS=y
 CONFIG_NET_STATISTICS_PERIODIC_OUTPUT=n
 
+CONFIG_HTTP_CLIENT=y
+
 CONFIG_WIFI=y
 CONFIG_WIFI_LOG_LEVEL_ERR=y
 # printing of scan results puts pressure on queues in new locking
