--- a/wifi_example/prj.conf
+++ b/wifi_example/prj.conf
@@ -5,6 +5,7 @@ CONFIG_MAIN_STACK_SIZE=5200
 CONFIG_SHELL_STACK_SIZE=5200
 CONFIG_NET_TX_STACK_SIZE=2048
 CONFIG_NET_RX_STACK_SIZE=2048
+CONFIG_LOG_BUFFER_SIZE=4096
 
 CONFIG_NET_PKT_RX_COUNT=10
 CONFIG_NET_PKT_TX_COUNT=10
