--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,10 +7,10 @@
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "openocd",
-            "serverpath": "${userHome}/.pico-sdk/openocd/0.12.0+dev/openocd.exe",
-            "searchDir": ["${userHome}/.pico-sdk/openocd/0.12.0+dev/scripts"],
+            "serverpath": "${command:raspberry-pi-pico.getOpenOCDRoot}/openocd.exe",
+            "searchDir": ["${command:raspberry-pi-pico.getOpenOCDRoot}/scripts"],
             "toolchainPrefix": "arm-zephyr-eabi",
-            "armToolchainPath": "${userHome}/zephyr-sdk-0.17.0/arm-zephyr-eabi/bin",
+            "armToolchainPath": "${command:raspberry-pi-pico.getZephyrWorkspacePath}/zephyr-sdk-0.17.0/arm-zephyr-eabi/bin",
             "device": "RP2350",
             "configFiles": [
                 "interface/cmsis-dap.cfg",
@@ -29,10 +29,10 @@
             "request": "launch",
             "type": "cortex-debug",
             "servertype": "openocd",
-            "serverpath": "${userHome}/.pico-sdk/openocd/0.12.0+dev/openocd.exe",
-            "searchDir": ["${userHome}/.pico-sdk/openocd/0.12.0+dev/scripts"],
+            "serverpath": "${command:raspberry-pi-pico.getOpenOCDRoot}/openocd.exe",
+            "searchDir": ["${command:raspberry-pi-pico.getOpenOCDRoot}/scripts"],
             "toolchainPrefix": "arm-zephyr-eabi",
-            "armToolchainPath": "${userHome}/zephyr-sdk-0.17.0/arm-zephyr-eabi/bin",
+            "armToolchainPath": "${command:raspberry-pi-pico.getZephyrWorkspacePath}/zephyr-sdk-0.17.0/arm-zephyr-eabi/bin",
             "device": "RP2040",
             "configFiles": [
                 "interface/cmsis-dap.cfg",
