Refactor: Add pico extension required lines to CMake files
The Pico extension looks for these lines to classify the workspace as a
pico zephyr project. This enables the functionality in the pico
extension.

--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -3,6 +3,9 @@
 #
 # Copyright (c) 2021 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+# pico_zephyr
+# =========================================================================================
 
 cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
