--- a/blinky/CMakeLists.txt
+++ b/blinky/CMakeLists.txt
@@ -3,6 +3,9 @@
 #
 # Copyright (c) 2021 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
+# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
+# pico_zephyr
+# =========================================================================================
 
 cmake_minimum_required(VERSION 3.13.1)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
