--- a/west.yml
+++ b/west.yml
@@ -17,6 +17,6 @@ manifest:
         # By using name-allowlist we can clone only the modules that are
         # strictly needed by the application.
         name-allowlist:
-          - cmsis      # required by the ARM port
+          - cmsis_6      # required by the ARM port
           - hal_rpi_pico # required for Pico board support
           - hal_infineon
