--- a/blinky/.vscode/tasks.json
+++ b/blinky/.vscode/tasks.json
@@ -32,7 +32,17 @@
                 "reveal": "always",
                 "panel": "dedicated"
             },
-            "problemMatcher": "$gcc"
+            "problemMatcher": "$gcc",
+			"windows": {
+                "options": {
+                    "shell": {
+                        "executable": "cmd.exe",
+                        "args": [
+                            "/d", "/c"
+                        ]
+                    }
+                }
+            }
         },
 		{
 			"label": "Flash",
