--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -7,5 +7,6 @@
     },
     "terminal.integrated.env.linux": {
         "PATH": "${env:HOME}/.pico-sdk/cmake/v3.31.5/bin:${env:HOME}/.pico-sdk/dtc/bin:${env:HOME}/.pico-sdk/gperf/bin:${env:HOME}/.pico-sdk/ninja/v1.12.1:${env:HOME}/.pico-sdk/python/3.12.6:${env:HOME}/.pico-sdk/wget:/usr/bin/git:${env:PATH}"
-    }
+    },
+    "cmake.configureOnOpen": false
 }
