--- a/app/.vscode/settings.json
+++ b/app/.vscode/settings.json
@@ -1,12 +1,37 @@
 {
+    "cmake.options.statusBarVisibility": "hidden",
+    "cmake.options.advanced": {
+        "build": {
+            "statusBarVisibility": "hidden"
+        },
+        "launch": {
+            "statusBarVisibility": "hidden"
+        },
+        "debug": {
+            "statusBarVisibility": "hidden"
+        }
+    },
+    "cmake.configureOnEdit": false,
+    "cmake.automaticReconfigure": false,
+    "cmake.configureOnOpen": false,
+    "cmake.generator": "Ninja",
+    "cmake.cmakePath": "${userHome}/.pico-sdk/cmake/v4.1.1/bin/cmake",
+    "C_Cpp.debugShortcut": false,
     "terminal.integrated.env.windows": {
-        "PATH": "${env:USERPROFILE}/.pico-sdk/cmake/v3.31.5/bin;${env:USERPROFILE}/.pico-sdk/dtc/bin;${env:USERPROFILE}/.pico-sdk/gperf/bin;${env:USERPROFILE}/.pico-sdk/ninja/v1.12.1;${env:USERPROFILE}/.pico-sdk/python/3.12.6;${env:USERPROFILE}/.pico-sdk/wget;C:/Program Files/7-Zip;C:\\Program Files\\Git\\cmd\\git.EXE;${env:USERPROFILE}/.pico-sdk/git/cmd;${env:PATH}"
+        "Path": "${env:USERPROFILE}/.pico-sdk/cmake/v4.1.1/bin;${env:USERPROFILE}/.pico-sdk/ninja/v1.13.1;${env:USERPROFILE}/.pico-sdk/dtc/1.6.1/bin;${env:USERPROFILE}/.pico-sdk/gperf/3.1;${env:USERPROFILE}/.pico-sdk/wget/1.21.4;${env:USERPROFILE}/.pico-sdk/7zip;${env:Path};"
     },
     "terminal.integrated.env.osx": {
-        "PATH": "{${env:HOME}/.pico-sdk/cmake/v3.31.5/bin:${env:HOME}/.pico-sdk/dtc/bin:${env:HOME}/.pico-sdk/gperf/bin:${env:HOME}/.pico-sdk/ninja/v1.12.1:${env:HOME}/.pico-sdk/python/3.12.6:${env:HOME}/.pico-sdk/wget:/usr/bin/git:${env:PATH}"
+        "PATH": "${env:HOME}/.pico-sdk/cmake/v4.1.1/bin:${env:HOME}/.pico-sdk/ninja/v1.13.1:${env:PATH}:"
     },
     "terminal.integrated.env.linux": {
-        "PATH": "${env:HOME}/.pico-sdk/cmake/v3.31.5/bin:${env:HOME}/.pico-sdk/dtc/bin:${env:HOME}/.pico-sdk/gperf/bin:${env:HOME}/.pico-sdk/ninja/v1.12.1:${env:HOME}/.pico-sdk/python/3.12.6:${env:HOME}/.pico-sdk/wget:/usr/bin/git:${env:PATH}"
+        "PATH": "${env:HOME}/.pico-sdk/cmake/v4.1.1/bin:${env:HOME}/.pico-sdk/ninja/v1.13.1:${env:PATH}:"
     },
-    "cmake.configureOnOpen": false
+    "raspberry-pi-pico.cmakeAutoConfigure": true,
+    "raspberry-pi-pico.useCmakeTools": false,
+    "raspberry-pi-pico.cmakePath": "${HOME}/.pico-sdk/cmake/v4.1.1/bin/cmake",
+    "raspberry-pi-pico.ninjaPath": "${HOME}/.pico-sdk/ninja/v1.13.1/ninja",
+    "editor.formatOnSave": true,
+    "search.exclude": {
+        "build/": true
+    }
 }
