--- a/app/CMakeLists.txt
+++ b/app/CMakeLists.txt
@@ -1,13 +1,15 @@
+#pico-zephyr-project
 #-------------------------------------------------------------------------------
 # Zephyr Example Application
 #
 # Copyright (c) 2021 Nordic Semiconductor ASA
 # SPDX-License-Identifier: Apache-2.0
-# == DO NOT EDIT THE FOLLOWING LINES for the Raspberry Pi Pico VS Code Extension to work ==
-# pico_zephyr
-# =========================================================================================
+#-------------------------------------------------------------------------------
+# NOTE: Please do not remove the #pico-zephyr-project header, it is used by
+# the Raspberry Pi Pico VS Code extension to identify the project type.
+#-------------------------------------------------------------------------------
 
-cmake_minimum_required(VERSION 3.13.1)
+cmake_minimum_required(VERSION 3.20.0)
 find_package(Zephyr REQUIRED HINTS $ENV{ZEPHYR_BASE})
 
 project(app LANGUAGES C)
