--- a/blinky/.vscode/tasks.json
+++ b/blinky/.vscode/tasks.json
@@ -2,48 +2,46 @@
 	"version": "2.0.0",
 	"tasks": [
 		{
-            "label": "Compile Project",
-            "type": "shell",
-            "command": "${command:raspberry-pi-pico.getWestPath}",
-            "args":  [
+			"label": "Compile Project",
+			"type": "shell",
+			"command": "${command:raspberry-pi-pico.getWestPath}",
+			"args": [
 				"build",
 				"-p",
 				"auto",
 				"-b",
-				"rpi_pico",
+				"rpi_pico2/rp2350a/m33/w",
 				"-d",
-				"\"${workspaceFolder}\"/build",
-                "\"${workspaceFolder}\"",
-				"${input:usb_serial_port}",
+				"\"${workspaceFolder}/build\"",
+				"\"${workspaceFolder}\"",
 				"--",
-				"-DOPENOCD=${command:raspberry-pi-pico.getOpenOCDRoot}/openocd.exe",
+				"-DOPENOCD=${command:raspberry-pi-pico.getOpenOCDRoot}/openocd",
 				"-DOPENOCD_DEFAULT_PATH=${command:raspberry-pi-pico.getOpenOCDRoot}/scripts"
 			],
-            "group": {
-				"kind": "build"
+			"group": {
+				"kind": "build",
+				"isDefault": true
 			},
+			"presentation": {
+				"reveal": "always",
+				"panel": "dedicated"
+			},
+			"problemMatcher": "$gcc",
 			"options": {
-				"env": {
-					"SNIPPET_ROOT": "${command:raspberry-pi-pico.getZephyrWorkspacePath}/pico-zephyr"
-				},
 				"cwd": "${command:raspberry-pi-pico.getZephyrWorkspacePath}"
 			},
-            "presentation": {
-                "reveal": "always",
-                "panel": "dedicated"
-            },
-            "problemMatcher": "$gcc",
 			"windows": {
-                "options": {
-                    "shell": {
-                        "executable": "cmd.exe",
-                        "args": [
-                            "/d", "/c"
-                        ]
-                    }
-                }
-            }
-        },
+				"options": {
+					"shell": {
+						"executable": "cmd.exe",
+						"args": [
+							"/d",
+							"/c"
+						]
+					}
+				}
+			}
+		},
 		{
 			"label": "Flash",
 			"type": "shell",
@@ -54,47 +52,26 @@
 			"args": [
 				"flash",
 				"--build-dir",
-				"\"${workspaceFolder}\"/build"
+				"\"${workspaceFolder}/build\""
 			],
 			"options": {
 				"cwd": "${command:raspberry-pi-pico.getZephyrWorkspacePath}"
 			}
 		},
-        {
-            "label": "Run Project",
-            "type": "shell",
-            "command": "${env:HOME}/.pico-sdk/picotool/2.1.1/picotool/picotool",
-            "args": [
-                "load",
-                "\"${workspaceFolder}\"/build/zephyr/zephyr.elf",
-                "-fx"
-            ],
-            "presentation": {
-                "reveal": "always",
-                "panel": "dedicated"
-            },
-            "problemMatcher": [],
-            "windows": {
-                "command": "\"${env:USERPROFILE}\"/.pico-sdk/picotool/2.1.1/picotool/picotool.exe"
-            }
-        }
-	],
-	"inputs": [
-	{
-		"id": "application",
-		"type": "promptString",
-		"description": "Application to build, e.g app",
-		"default": "app"
-	},
-	{
-		"id": "usb_serial_port",
-		"type": "pickString",
-		"description": "Select whether to use the UART serial port or the USB serial port",
-		"default": "",
-		"options": [
-			{"label": "UART", "value": ""},
-			{"label": "USB", "value": "-S usb_serial_port"}
-      ]
-	}
-  ]
+		{
+			"label": "Run Project",
+			"type": "shell",
+			"command": "${command:raspberry-pi-pico.getPicotoolPath}",
+			"args": [
+				"load",
+				"\"${workspaceFolder}/build/zephyr/zephyr.elf\"",
+				"-fx"
+			],
+			"presentation": {
+				"reveal": "always",
+				"panel": "dedicated"
+			},
+			"problemMatcher": []
+		}
+	]
 }
