Add more gitignores
Signed-off-by: paulober <44974737+paulober@users.noreply.github.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+build/
+
 # Created by https://www.toptal.com/developers/gitignore/api/c,cmake,linux,macos,ninja,windows,visualstudiocode,python,venv
 # Edit at https://www.toptal.com/developers/gitignore?templates=c,cmake,linux,macos,ninja,windows,visualstudiocode,python,venv
 
